--- a/src/fr/fjdhj/ECDesktop/view/mainMenu.fxml
+++ b/src/fr/fjdhj/ECDesktop/view/mainMenu.fxml
@@ -68,10 +68,10 @@
          <top>
             <BorderPane maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" BorderPane.alignment="CENTER">
                <left>
-                  <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" text="&lt;" BorderPane.alignment="CENTER" />
+                  <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#previousMonth" text="&lt;" BorderPane.alignment="CENTER" />
                </left>
                <right>
-                  <Button mnemonicParsing="false" text="&gt;" BorderPane.alignment="CENTER" />
+                  <Button mnemonicParsing="false" onAction="#nextMonth" text="&gt;" BorderPane.alignment="CENTER" />
                </right>
                <center>
                   <Text fx:id="textMonth" strokeType="OUTSIDE" strokeWidth="0.0" text="MOIS" textAlignment="CENTER" BorderPane.alignment="CENTER">
